--- a/Interfaces (Web)/Tela de questões/TelaQuestoes.html
+++ b/Interfaces (Web)/Tela de questões/TelaQuestoes.html
@@ -1,115 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>EasyQuiz TOP</title>
+	<head>
+	  	<title>EasyQuiz</title>
 
-  <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-	<style type="text/css">
-		.orange {
-	  		background-color: #f4511e !important;
-		}
+	  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 
-		[type="radio"].with-gap:checked + label:before,
-		[type="radio"].with-gap:checked + label:after {
-		  border: 2px solid #f4511e;
-		}
+	  	<!-- CSS  -->
+	  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	  	<link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+	  	<link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-		[type="radio"].with-gap:checked + label:after {
-		  background-color: #f4511e;
-		}
-	</style>
-</head>
-<body>
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="card">
-          <div class="card-panel #f4511e deep-orange darken-1 white-text ">
-          	<div name="Materia"> Materia1 </div>
-          	<div name="Dificuldade"> Dificuldade1 </div>
-          </div>
-            <div class="card-image">
-              <img src="ImagemTeste.jpg">
-              <!--<span class="card-title">Card Title</span>-->
-            </div>
-            <div class="card-content">
-              	<div name="Enunciado">
-              		<p>Ei amiguinho! E o bambu?</p>
-            	</div>
-            	<div name="Alternativas">
-              		<form action="#">
-					    <p>
-					      <input class="with-gap" name="group1" type="radio" id="test1"  />
-					      <label for="test1">Enfia no **</label>
-					    </p>
-					    <p>
-					      <input class="with-gap" name="group1" type="radio" id="test2"  />
-					      <label for="test2">Enfia no **</label>
-					    </p>
-					    <p>
-					      <input class="with-gap" name="group1" type="radio" id="test3"  />
-					      <label for="test3">Enfia no **</label>
-					    </p>
-					    <p>
-					      <input class="with-gap" name="group1" type="radio" id="test4"  />
-					      <label for="test4">Enfia no **</label>
-					    </p>
-					</form>
-            	</div>
-            </div>
-            <div class="card-action">
-				<button class="btn waves-effect waves-orange orange right" type="submit" name="action">Responder
-					<i class="material-icons">send</i>
-				</button>
-        		<a href="#"><b>Forum</b></a>
+		<style type="text/css">
+			.orange {
+		  		background-color: #f4511e !important;
+			}
 
-            </div>
-          </div>
-        </div>
-      </div>
+			[type="radio"].with-gap:checked + label:before,
+			[type="radio"].with-gap:checked + label:after {
+			  border: 2px solid #f4511e;
+			}
 
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="card">
-          <div class="card-panel #f4511e deep-orange darken-1 white-text ">
-          	<div name="Materia"> Materia1 </div>
-          	<div name="Dificuldade"> Dificuldade1 </div>
-          </div>
-            <div class="card-image">
-              <img src="ImagemTeste.jpg">
-              <!--<span class="card-title">Card Title</span>-->
-            </div>
-            <div class="card-content">
-              	<div name="Enunciado">
-              		<p>Ei amiguinho! E o bambu?</p>
-            	</div>
-            	<div name="Alternativas">
-              		<form action="#">
-					    <textarea rows="100" cols="100">
-						</textarea> 
-					</form>
-            	</div>
-            </div>
-            <div class="card-action">
-				<button class="btn waves-effect waves-orange orange right" type="submit" name="action">Responder
-					<i class="material-icons">send</i>
-				</button>
-        		<a href="#"><b>Forum</b></a>
+			[type="radio"].with-gap:checked + label:after {
+			  background-color: #f4511e;
+			}
 
-            </div>
-          </div>
-        </div>
-      </div>
+			.card {
+				width: 700px;
+			}
+			.card-panel {
+				width: 100%;
+				height: 45px;
+				padding-top: 0%;
+	    	}
+			.card-image {
+				height: 250px;
+			}
+			.card-image img {
+				max-height: 100%;
+	  			max-width: 100%;
+			}
+			.card-content {
+	    		height: 60%;
+	    	}
+			.card-action {
+				height: 70px;
+			}
+			.container{
+				width: 100%;
+			}
+	    	label{
+	    		color: black;
+	    	}
 
-      
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
 
-  </body>
+		</style>
+	</head>
+	<body>
+		<div class="container">
+
+		    <div class="row">
+		    	<div class="col s12 m4">
+					<div class="card">
+
+				        <div class="card-panel #f4511e deep-orange darken-1 white-text">
+							<div style="">
+				          		<b style="padding-top: 0px">Disciplina: </b><span id="disciplina1">Física</span>
+				          		<b style="padding-left:50%;padding-top: 0px">Dificuldade: </b><span id="dificuldade1">Desafio</span>
+				          	</div>
+				          	<div>
+				          		<span id="modulo1" style=""><b>Módulo: </b>Termodinâmica</span>
+				          	</div>
+				        </div>
+
+				        <div class="card-image">
+				           	<img id="imagem1" class="responsive-img" src="Geladeira.png">
+				        </div>
+
+				        <div class="card-content">
+				            <div id="enunciado1">
+				              	<p><b>A invenção da geladeira proporcionou uma revolução no aproveitamento dos alimentos, ao permitir que fossem armazenados e transportados por longos períodos. A figura apresentada ilustra o processo cíclico de funcionamento de uma geladeira, em que um gás no interior de uma tubulação é forçado a circular entre o congelador e a parte externa da geladeira. É por meio dos processos de compressão, que ocorre na parte externa, e de expansão, que ocorre na parte interna, que o gás proporciona a troca de calor entre o interior e o exterior da geladeira. Nos processos de transformação de energia envolvidos no funcionamento da geladeira, </b></p>
+				            </div>
+				            <div name="alternativas1">
+				              	<form action="#" id="form1">
+									<p>
+									    <input class="with-gap" name="grupo1" type="radio" id="alternativa1"  />
+									     <label for="alternativa1"><b>a)</b> a expansão do gás é um processo que cede a energia necessária ao resfriamento da parte interna da geladeira. </label>
+									</p>
+									<p>
+									    <input class="with-gap" name="grupo1" type="radio" id="alternativa2"  />
+									    <label for="alternativa2"><b>b)</b> o calor flui de forma não espontânea da parte mais fria, no interior, para a mais quente, no exterior da geladeira. </label>
+									</p>
+									<p>
+									    <input class="with-gap" name="grupo1" type="radio" id="alternativa3"  />
+									    <label for="alternativa3"><b>c)</b> a quantidade de calor cedida ao meio externo é igual ao calor retirado da geladeira.</label>
+									</p>
+									<p >
+									    <input class="with-gap" name="grupo1" type="radio" id="alternativa4"  />
+									    <label for="alternativa4"><b>d)</b> a eficiência é tanto maior quanto menos isolado termicamente do ambiente externo for o seu compartimento interno.</label>
+									</p>
+									<p>
+									    <input class="with-gap" name="grupo1" type="radio" id="alternativa5"  />
+									    <label for="alternativa5"><b>e)</b> a energia retirada do interior pode ser devolvida à geladeira abrindo-se a sua porta, o que reduz seu consumo de energia.</label>
+									</p>
+								</form>
+				            </div>
+				        </div>
+
+				        <div class="card-action">
+							<button class="btn waves-effect waves-orange orange right" form="form1" type="submit" id="responder1">Responder</button>
+				        	<a id="forum1" href="#"><b>Forum</b></a>
+				        </div>
+
+		          	</div>
+		        </div>
+		    </div>
+
+		    <div class="row">
+		    	<div class="col s12 m4">
+					<div class="card">
+
+				        <div class="card-panel #f4511e deep-orange darken-1 white-text">
+							<div style="">
+				          		<b style="padding-top: 0px">Disciplina: </b><span id="disciplina2">História</span>
+				          		<b style="padding-left:50%;padding-top: 0px">Dificuldade: </b><span id="dificuldade2">Difícil</span>
+				          	</div>
+				          	<div>
+				          		<span id="modulo2" style=""><b>Módulo: </b>Segunda Guerra Mundial</span>
+				          	</div>
+				        </div>
+				        <!--
+				        <div class="card-image">
+				           	<img id="imagem2" class="responsive-img" src="">
+				        </div>
+						-->
+				        <div class="card-content">
+				            <div name="enunciado2">
+				              	<b>Baseado nos conhecimentos previamente adquiridos relativos a disciplina, discurse sobre o Nazismo.</b>
+				            </div>
+				            <div name="resposta2">
+				              	<form action="#" id="form2">
+									<div class="row">
+								        <div class="input-field col s12">
+									        <textarea id="textarea2" class="materialize-textarea"></textarea>
+									        <label for="textarea2">Resposta:</label>
+								        </div>
+								    </div>
+								</form>
+				            </div>
+				        </div>
+
+				        <div class="card-action">
+							<button class="btn waves-effect waves-orange orange right" form="form2" type="submit" id="responder2">Responder</button>
+				        	<a href="#"><b>Forum</b></a>
+				        </div>
+
+		          	</div>
+		        </div>
+		    </div>
+
+		</div>
+
+		<!--  Scripts-->
+		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script src="../js/materialize.js"></script>
+		<script src="../js/init.js"></script>
+
+	</body>
 </html>
