--- a/Interfaces (Web)/Tela de cadastro de usuários/Cadastro.html
+++ b/Interfaces (Web)/Tela de cadastro de usuários/Cadastro.html
@@ -9,12 +9,13 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
   <script type="text/javascript">
+
     $(document).ready(function() {
-    $('select').material_select();
-  });
+      $('select').material_select();
+    });
+
   </script>
 
 </head>
@@ -34,7 +35,6 @@
   			<a id="botao-portugues" class="waves-effect waves-light" style="margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; padding-top: 2px; background-color: #E5E9F2; color: #47525E">Português</a>
   			<a id="botao-fisica" class="waves-effect waves-light" style="margin-left: 10px; margin-right: 10px; padding-left: 5px; padding-right: 5px; padding-top: 2px; background-color: #E5E9F2; color: #47525E">Física</a>
   		</div>
-
   </nav>
 
     <br>
@@ -43,33 +43,67 @@
       <form class="col s12">
           <div class="input-field col s6">
             <i class="material-icons prefix">account_circle</i>
-            <input id="icon_prefix" type="text" class="validate">
-            <label for="icon_prefix">Nome completo</label>
+            <input id="nome" type="text" class="validate">
+            <label for="nome">Nome completo</label>
           </div>
+
+          <div class="input-field col s6">
+            <i class="material-icons prefix">email</i>
+            <input id="email" type="email" class="validate">
+            <label for="email">E-mail</label>
+          </div>
+
           <br>
-          <br>
-          Data de nascimento:
+
+          <label for="escolhe_data">Data de nascimento:</label>
           <div class="input-field col s6">
             <i class="material-icons prefix">perm_contact_calendar</i>
-            <input id="icon_telephone" type="date" class="validate">
+            <input id="escolhe_data" type="date" class="validate">
           </div>
-          <br>
-          <br>
-          <div class="input-field col s12">
-            <select>
+
+          <label for="escolaridade">Escolaridade:</label>
+          <div class="input-field col s6">
+          <i class="material-icons prefix">class</i>
+            <select id="escolaridade">
               <option value="" selected>Escolaridade</option>
-              <option value="1">Option 1</option>
-              <option value="2">Option 2</option>
-              <option value="3">Option 3</option>
+              <option value="1">Analfabeto</option>
+              <option value="2">Fundamental incompleto</option>
+              <option value="3">Fundamental completo</option>
+              <option value="4">Médio incompleto</option>
+              <option value="5">Médio completo</option>
+              <option value="6">Superior incompleto</option>
+              <option value="7">Superior completo</option>
+              <option value="8">Pós graduado</option>
             </select>
           </div>
+
+          <br>
+
+          <label for="senha">Senha:</label>
+          <div class="input-field col s6">
+            <i class="material-icons prefix">lock_outline</i>
+            <input id="senha" type="password" class="validate">
+          </div>
+          <label for="senha">Confirmar senha:</label>
+          <div class="input-field col s6">
+            <input type="password" id="confirma_senha">
+          </div>
+
+          <br>
+          <br>
+          <br>
+
+          <div align="right">
+            <button class="btn waves-effect waves-light" type="button" onclick="window.open('../Tela de questões/TelaQuestoes.html');">Cancelar</button>
+
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="window.open('../Tela de questões/TelaQuestoes.html');">Confirmar
+              <i class="material-icons right">send</i>
+            </button>
+          </div>
+          
       </form>
     </div>
-	
-    <br>
-    <br>
-    <br>
-    <br>
+
     <br>
     <br>
 
