--- a/Interfaces (Web)/Tela de fórum/Forum.html
+++ b/Interfaces (Web)/Tela de fórum/Forum.html
@@ -25,7 +25,7 @@
   	<div class="nav-wrapper container">
       <a id="logo-container" href="#" style="color:#47525E; font-size: 32px;">EasyQuiz</a>
       <a id="botao-menu" class="btn-small waves-effect waves-light grey">Menu</a>  
-      <a style="color: #000000; margin-left: 100px;" align="right">cole ze</a>
+      <a style="color: #000000; margin-left: 100px;" align="right"></a>
     </div>
   </nav>
 
