--- a/Interfaces (Web)/Tela de gerenciamento de perfil/GerenciarPerfil.html
+++ b/Interfaces (Web)/Tela de gerenciamento de perfil/GerenciarPerfil.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>EasyQuiz TOP</title>
+  <title>EasyQuiz</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -25,7 +25,7 @@
   	<div class="nav-wrapper container">
       <a id="logo-container" href="#" style="color:#47525E; font-size: 32px;">EasyQuiz</a>
       <a id="botao-menu" class="btn-small waves-effect waves-light grey">Menu</a>  
-      <a style="color: #000000; margin-left: 100px;" align="right">cole ze</a>
+      <a style="color: #000000; margin-left: 100px;" align="right"></a>
     </div>
   </nav>
 
