Atualiza EasyQuiz (Interfaces, DER, CDU)

--- a/Interfaces (Web)/Menu.html
+++ b/Interfaces (Web)/Menu.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>EasyQuiz TOP</title>
+  <title>EasyQuiz</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -85,7 +85,7 @@
     				<option value="2">Médio</option>
     				<option value="3">Difícil</option>
     				<option value="4">Desafio</option>
-            <option value="0">Nenhuma</option>
+            <option value="0">Nenhum</option>
   				</select>
 
   				<select id="materia" class="browser-default input-field col s6" style="color: #696969;">
@@ -97,7 +97,7 @@
     				<option value="5">História</option>
     				<option value="6">Química</option>
     				<option value="7">Inglês</option>
-            <option value="0">Nenhuma</option>
+            <option value="0">Nenhum</option>
   				</select>
           </div>
           <div class"row">
@@ -106,13 +106,12 @@
             <option value="" disabled selected>Escolha um tipo</option>
             <option value="1">Aberta</option>
             <option value="2">Fechada</option>
-            <option value="3">Ambos</option>
-            <option value="0">Desafio</option>
+            <option value="3">Nenhum</option>
           </select>
 
           <select id="materia" class="browser-default input-field col s6" style="color: #696969;">
             <option value="" disabled selected>Escolha um módulo</option>
-            <option value="0">Nenhuma</option>
+            <option value="0">Nenhum</option>
             
           </select>
         </div>
@@ -153,7 +152,7 @@ Tenho certeza que você notou um elemento fixo no canto direito da tela, estou t
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Quem somos</h5>
-          <p class="grey-text text-lighten-4">Fala q é nois</p>
+          <p class="grey-text text-lighten-4"></p>
 
 
         </div>
