--- a/Interfaces (Web)/Tela de gerenciamento de perfil/GerenciarPerfil.html
+++ b/Interfaces (Web)/Tela de gerenciamento de perfil/GerenciarPerfil.html
@@ -128,7 +128,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Quem somos</h5>
-          <p class="grey-text text-lighten-4">Fala q é nois</p>
+          <p class="grey-text text-lighten-4"></p>
 
 
         </div>
