--- a/Interfaces (Web)/Tela de questões/TelaQuestoes.html
+++ b/Interfaces (Web)/Tela de questões/TelaQuestoes.html
@@ -12,9 +12,6 @@
 	  	<link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
 		<style type="text/css">
-			.orange {
-		  		background-color: #f4511e !important;
-			}
 
 			[type="radio"].with-gap:checked + label:before,
 			[type="radio"].with-gap:checked + label:after {
@@ -108,7 +105,7 @@
 				        </div>
 
 				        <div class="card-action">
-							<button class="btn waves-effect waves-orange orange right" form="form1" type="submit" id="responder1">Responder</button>
+							<button class="btn waves-effect waves-orange orange right" style="background-color: #f4511e !important;" form="form1" type="submit" id="responder1">Responder</button>
 				        	<a id="forum1" href="#"><b>Forum</b></a>
 				        </div>
 
@@ -151,7 +148,7 @@
 				        </div>
 
 				        <div class="card-action">
-							<button class="btn waves-effect waves-orange orange right" form="form2" type="submit" id="responder2">Responder</button>
+							<button class="btn waves-effect waves-orange orange right" form="form2" style="background-color: #f4511e !important;" type="submit" id="responder2">Responder</button>
 				        	<a href="#"><b>Forum</b></a>
 				        </div>
 
