--- a/Interfaces (Web)/Tela de fórum/Forum.html
+++ b/Interfaces (Web)/Tela de fórum/Forum.html
@@ -165,7 +165,7 @@ function exibeRespostaComentario2() {
     <div class="container">
       <h5 style="color: #C55353" href="" id="nomeUsuario">Abelardo</h5><br>
           <div class="row">
-        <div class="card-panel teal lighten-2">
+        <div class="card-panel red lighten-2">
           <span class="white-text"><b><h7>Citando Romildo:</h7></b>
           <p><i>Não entendi bem como funciona a compressão e a expansão. Alguém pode me ajudar?
           </i></span>
