Atualiza Tela Menu

--- a/Interfaces (Web)/Menu/Menu.html
+++ b/Interfaces (Web)/Menu/Menu.html
@@ -9,11 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <style type="text/css">
-    .pesquisa {
 
-    }
-  </style>
 </head>
 <body>
 
@@ -186,8 +182,8 @@ Tenho certeza que você notou um elemento fixo no canto direito da tela, estou t
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="../js/materialize.js"></script>
+  <script src="../js/init.js"></script>
 
   </body>
 </html>
