--- a/Interfaces (Web)/Menu/Menu_logado.html
+++ b/Interfaces (Web)/Menu/Menu_logado.html
@@ -45,6 +45,7 @@
         <li><a class="waves-effect waves-light grey darken-2 btn" href="#">&ensp;Perfil&ensp;</a></li>
         <!-- if(usuario = professor) -->
         <li><a class="waves-effect waves-light grey darken-2 btn" href="#">Questões</a></li>
+		<li><a class="waves-effect waves-light grey darken-2 btn" href="#">Sair</a></li>
         </ul>
     </div>
 
