--- a/Interfaces (Web)/Tela de gerenciamento de questões/gerenciamentoquestoes.html
+++ b/Interfaces (Web)/Tela de gerenciamento de questões/gerenciamentoquestoes.html
@@ -1,79 +1,81 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-	<!-- Compiled and minified JQuery -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<style>
-		.tipo {
-			background-color: palegreen;
-			border-radius: 10px;
-		}
-		.lbltipo {
-			color: black;
-		}
-		.botaoadd {
-			background-color: palegreen;
-		}
-		.testequestao {
-			border: 1px solid black;
-			padding: 8px;
-		}
-	</style>
-	<!--modificar o hover do botaoadd para que não fique na cor padrão do materialize-->
-</head>
-<body>
-	<div class="container">
-		<a class="waves-effect waves-light btn right botaoadd"><i class="material-icons left">add</i>Adicionar questão</a>
-		<br>
-		<br>
-		<div class="row">
-      <div class="col s4 offset-s8 tipo">
-				<p>Tipo: </p> <!-- adequar o estilo da fonte ao do label-->
-				<form action="#">
-    			<p>
-      			<input name="questao1" type="radio" id="test1" />
-      			<label for="test1" class="lbltipo">Fechada</label>
-    			</p>
-    			<p>
-      			<input name="questao1" type="radio" id="test2" />
-      			<label for="test2" class="lbltipo">Aberta</label>
-    			</p>
-  			</form>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+	  	<title>EasyQuiz</title>
+
+	  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+
+	  	<!-- CSS  -->
+	  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+			<link rel="stylesheet" href="gq.css">
+	</head>
+	<body>
+		<div class="container page">
+			<div class="container">
+				<h4>Questões cadastradas:</h4>
 			</div>
-    </div>
-		<br>
-		<br>
-		<div class="row">
-      <div class="col s4 offset-s8 tipo">
-				<p>Tipo: </p> <!-- adequar o estilo da fonte ao do label-->
-				<form action="#">
-    			<p>
-      			<input name="questao2" type="radio" id="test3" />
-      			<label for="test3" class="lbltipo">Fechada</label>
-    			</p>
-    			<p>
-      			<input name="questao2" type="radio" id="test4" />
-      			<label for="test4" class="lbltipo">Aberta</label>
-    			</p>
-  			</form>
-			</div>
-    </div>
-		<div class="container testequestao">
 			<div class="row">
-				<div class="col s6">
-					<a class="waves-effect waves-light btn right botaoadd"><i 	class="material-icons left">add</i>Adicionar 	alternativa</a>
-				</div>
-				<div class="col s5 offset-s1">
-					<a class="waves-effect waves-light btn right botaoadd"><i 	class="material-icons right">photo</i>Adicionar foto</a>
+				<div class="col s8 m9 l9" id="divQuestoes">
+				<div class="container questao" id="questao1">	
+					<div class="deep-orange darken-1 white-text cabecalho">
+					<strong>Física</strong> > Termodinâmica
+					</div>
+					<div class="content-questao">
+						<div class="container">
+							<img id="imagem1" class="responsive-img center" src="Geladeira.png">
+						</div>
+						<form action="#" id="form1">
+							<div>
+								<div id="enunciado1">
+									<p class="enun">A invenção da geladeira proporcionou uma revolução no aproveitamento dos alimentos, ao permitir que fossem armazenados e transportados por longos períodos. A figura apresentada ilustra o processo cíclico de funcionamento de uma geladeira, em que um gás no interior de uma tubulação é forçado a circular entre o congelador e a parte externa da geladeira. É por meio dos processos de compressão, que ocorre na parte externa, e de expansão, que ocorre na parte interna, que o gás proporciona a troca de calor entre o interior e o exterior da geladeira. Nos processos de transformação de energia envolvidos no funcionamento da geladeira, </p>
+								</div>
+								<div name="alternativas1">
+									<p>
+										<input class="with-gap" name="grupo1" type="radio" id="alternativa1"  />
+										<label for="alternativa1"><b>a)</b> a expansão do gás é um processo que cede a energia necessária ao resfriamento da parte interna da geladeira. </label>
+									</p>
+									<p>
+										<input class="with-gap" name="grupo1" type="radio" id="alternativa2"  />
+										<label for="alternativa2"><b>b)</b> o calor flui de forma não espontânea da parte mais fria, no interior, para a mais quente, no exterior da geladeira. </label>
+									</p>
+									<p>
+										<input class="with-gap" name="grupo1" type="radio" id="alternativa3"  />
+										<label for="alternativa3"><b>c)</b> a quantidade de calor cedida ao meio externo é igual ao calor retirado da geladeira.</label>
+								</p>
+								<p>
+									<input class="with-gap" name="grupo1" type="radio" id="alternativa4"  />
+									<label for="alternativa4"><b>d)</b> a eficiência é tanto maior quanto menos isolado termicamente do ambiente externo for o seu compartimento interno.</label>
+								</p>
+								<p>
+									<input class="with-gap" name="grupo1" type="radio" id="alternativa5"  />
+									<label for="alternativa5"><b>e)</b> a energia retirada do interior pode ser devolvida à geladeira abrindo-se a sua porta, o que reduz seu consumo de energia.</label>
+								</p>
+							</div>
+							<br>
+							<div class="row">
+								<div class="col s6">
+									<a class="waves-effect waves-light btn" onclick="editarquestao('questao1', this)"><i class="material-icons left">edit</i>Editar questão</a>
+								</div>
+								<div class="col s6">
+									<a class="waves-effect waves-light btn"><i class="material-icons left">delete</i>Excluir questão</a>
+								</div>
+							</div>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
-	</div>
-</body>
+		<div class="col s4 m3 l3">
+				<a class="waves-effect waves-light btn" href="adicionarquestao.html"><i class="material-icons left">add</i>Adicionar questão</a><!-- mudar cor -->
+		</div>	
+		</div>
+		</div>
+
+		<!--  Scripts-->
+		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script type="text/javascript" src="gq.js"></script>
+
+	</body>
 </html>
