Atualiza menu e tela de gerenciamento de questoes

--- a/Interfaces (Web)/Tela de gerenciamento de perfil/GerenciarPerfil.html
+++ b/Interfaces (Web)/Tela de gerenciamento de perfil/GerenciarPerfil.html
@@ -34,7 +34,6 @@
     
   <div class="container" style="display: inline;">
     <a id="logo-container" href="#" style="color:#47525E; font-size: 32px; margin-left: 50px;">EasyQuiz</a>
-    <a id="botao-menu" class="btn-small waves-effect waves-light grey">Menu</a> 
   </div>
 
     <ul id="side-nav" class="right hide-on-med-and-down" align="right">
@@ -136,8 +135,8 @@
       <br>
       <br>
       <H5 style="color: #47525E; display: inline;">Coeficiente de acerto:</H5> <H5 style="color: #C55353; display: inline;">70%</H5>
-      <div class="progress">
-        <div class="determinate" style="width: 70%"></div>
+      <div class="progress" style="z-index: -1;">
+        <div class="determinate" style="width: 70%; z-index: -11;"></div>
       </div>
     </div>
 
