--- a/Interfaces (Web)/Tela de gerenciamento de questões/gerenciamentoquestoes.html
+++ b/Interfaces (Web)/Tela de gerenciamento de questões/gerenciamentoquestoes.html
@@ -75,6 +75,7 @@
 
 		<!--  Scripts-->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 		<script type="text/javascript" src="gq.js"></script>
 
 	</body>
