--- a/Interfaces (Web)/Tela de gerenciamento de questões/gerenciamentoquestoes.html
+++ b/Interfaces (Web)/Tela de gerenciamento de questões/gerenciamentoquestoes.html
@@ -23,7 +23,7 @@
 					<strong>Física</strong> > Termodinâmica
 					</div>
 					<div class="content-questao">
-						<div class="container">
+						<div class="container" id="container-img1">
 							<img id="imagem1" class="responsive-img center" src="Geladeira.png">
 						</div>
 						<form action="#" id="form1">
@@ -31,7 +31,7 @@
 								<div id="enunciado1">
 									<p class="enun">A invenção da geladeira proporcionou uma revolução no aproveitamento dos alimentos, ao permitir que fossem armazenados e transportados por longos períodos. A figura apresentada ilustra o processo cíclico de funcionamento de uma geladeira, em que um gás no interior de uma tubulação é forçado a circular entre o congelador e a parte externa da geladeira. É por meio dos processos de compressão, que ocorre na parte externa, e de expansão, que ocorre na parte interna, que o gás proporciona a troca de calor entre o interior e o exterior da geladeira. Nos processos de transformação de energia envolvidos no funcionamento da geladeira, </p>
 								</div>
-								<div name="alternativas1">
+								<div id="alternativas1">
 									<p>
 										<input class="with-gap" name="grupo1" type="radio" id="alternativa1"  />
 										<label for="alternativa1"><b>a)</b> a expansão do gás é um processo que cede a energia necessária ao resfriamento da parte interna da geladeira. </label>
@@ -55,11 +55,37 @@
 							</div>
 							<br>
 							<div class="row">
-								<div class="col s6">
-									<a class="waves-effect waves-light btn" onclick="editarquestao('questao1', this)"><i class="material-icons left">edit</i>Editar questão</a>
+								<div class="col s6" name="divEditar">
+									<a class="waves-effect waves-light btn deep-orange darken-1" onclick="editarquestao('questao1', this)"><i class="material-icons left">edit</i>Editar questão</a>
 								</div>
-								<div class="col s6">
-									<a class="waves-effect waves-light btn"><i class="material-icons left">delete</i>Excluir questão</a>
+								<div class="col s6" name="divExcluir">
+									<a class="waves-effect waves-light btn deep-orange darken-1"><i class="material-icons left">delete</i>Excluir questão</a>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="container questao" id="questao2">	
+					<div class="deep-orange darken-1 white-text cabecalho">
+					<strong>Português</strong> > Modernismo
+					</div>
+					<div class="content-questao">
+						<form action="#" id="form2">
+							<div>
+								<div id="enunciado2">
+									<p class="enun">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+								</div>
+								<div id="resposta-aberta2">
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							</div>
+							<br>
+							<div class="row">
+								<div class="col s6" name="divEditar">
+									<a class="waves-effect waves-light btn deep-orange darken-1" onclick="editarquestao('questao2', this)"><i class="material-icons left">edit</i>Editar questão</a>
+								</div>
+								<div class="col s6" name="divExcluir">
+									<a class="waves-effect waves-light btn deep-orange darken-1"><i class="material-icons left">delete</i>Excluir questão</a>
 								</div>
 							</div>
 						</div>
@@ -68,7 +94,7 @@
 			</div>
 		</div>
 		<div class="col s4 m3 l3">
-				<a class="waves-effect waves-light btn" href="adicionarquestao.html"><i class="material-icons left">add</i>Adicionar questão</a><!-- mudar cor -->
+				<a class="waves-effect waves-light btn deep-orange darken-1" href="adicionarquestao.html"><i class="material-icons left">add</i>Adicionar questão</a><!-- mudar cor -->
 		</div>	
 		</div>
 		</div>
