Atualiza repositorio para entrega 3

--- a/Interfaces (Web)/Tela de questões/TelaQuestoes.html
+++ b/Interfaces (Web)/Tela de questões/TelaQuestoes.html
@@ -98,7 +98,7 @@
 
 
 	<div class="row" style="background-color: #EE6363; margin-top: 15px;" >
-    	<div  class="col s8" >Matérias comuns:
+    	<div  class="col s8" >Disciplinas comuns:
   			<a id="botao-matematica" class="waves-effect waves-light" style="margin-left: 5px; margin-right: 5px; padding-left: 5px; padding-right: 5px; padding-top: 2px; background-color: #E5E9F2; color: #47525E">Matemática</a>
   			<a id="botao-portugues" class="waves-effect waves-light" style="margin-left: 5px; margin-right: 5px; padding-left: 5px; padding-right: 5px; padding-top: 2px; background-color: #E5E9F2; color: #47525E">Português</a>
   			<a id="botao-fisica" class="waves-effect waves-light" style="margin-left: 5px; margin-right: 5px; padding-left: 5px; padding-right: 5px; padding-top:    2px; background-color: #E5E9F2; color: #47525E">Física</a>
@@ -130,7 +130,7 @@
 
             <div class="input-field col s6">
       				<select id="materia">
-        				<option value="" disabled selected>Escolha uma Matéria</option>
+        				<option value="" disabled selected>Escolha uma Disciplina</option>
         				<option value="1">Matemática</option>
         				<option value="2">Português</option>
         				<option value="3">Física</option>
@@ -194,8 +194,8 @@
                     <div id="enunciado1">
                         <p><b>A invenção da geladeira proporcionou uma revolução no aproveitamento dos alimentos, ao permitir que fossem armazenados e transportados por longos períodos. A figura apresentada ilustra o processo cíclico de funcionamento de uma geladeira, em que um gás no interior de uma tubulação é forçado a circular entre o congelador e a parte externa da geladeira. É por meio dos processos de compressão, que ocorre na parte externa, e de expansão, que ocorre na parte interna, que o gás proporciona a troca de calor entre o interior e o exterior da geladeira. Nos processos de transformação de energia envolvidos no funcionamento da geladeira, </b></p>
                     </div>
-                    <div name="alternativas1">
-                        <form action="#" id="form1">
+                  <div id="alternativas1">
+                  <form action="#" id="form1">
                   <p>
                       <input class="with-gap" name="grupo1" type="radio" id="alternativa1"  />
                        <label for="alternativa1"><b>a)</b> a expansão do gás é um processo que cede a energia necessária ao resfriamento da parte interna da geladeira. </label>
@@ -248,10 +248,10 @@
                 </div>
             -->
                 <div class="card-content">
-                    <div name="enunciado2">
+                    <div id="enunciado2">
                         <b>Baseado nos conhecimentos previamente adquiridos relativos a disciplina, discurse sobre o Nazismo.</b>
                     </div>
-                    <div name="resposta2">
+                    <div id="resposta2">
                         <form action="#" id="form2">
                   <div class="row">
                         <div class="input-field col s12">
