--- a/Interfaces (Web)/Tela de gerenciamento de perfil/GerenciarPerfil.html
+++ b/Interfaces (Web)/Tela de gerenciamento de perfil/GerenciarPerfil.html
@@ -53,7 +53,7 @@
     </ul>
 
   <div class="row" style="background-color: #EE6363; margin-top: 15px;" >
-      <div  class="col s8" >Matérias comuns:
+      <div  class="col s8" >Disciplinas comuns:
         <a id="botao-matematica" class="waves-effect waves-light" style="margin-left: 5px; margin-right: 5px; padding-left: 5px; padding-right: 5px; padding-top: 2px; background-color: #E5E9F2; color: #47525E">Matemática</a>
         <a id="botao-portugues" class="waves-effect waves-light" style="margin-left: 5px; margin-right: 5px; padding-left: 5px; padding-right: 5px; padding-top: 2px; background-color: #E5E9F2; color: #47525E">Português</a>
         <a id="botao-fisica" class="waves-effect waves-light" style="margin-left: 5px; margin-right: 5px; padding-left: 5px; padding-right: 5px; padding-top:    2px; background-color: #E5E9F2; color: #47525E">Física</a>
@@ -85,7 +85,7 @@
 
             <div class="input-field col s6">
               <select id="materia">
-                <option value="" disabled selected>Escolha uma Matéria</option>
+                <option value="" disabled selected>Escolha uma Disciplina</option>
                 <option value="1">Matemática</option>
                 <option value="2">Português</option>
                 <option value="3">Física</option>
